--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
+   "scripts": {
+  "prebuild": "rm -rf node_modules/.cache && npm install",
+  "build": "npm run prebuild && vite build"
+} 
   }
 }
